<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Question1"
            android:gravity="center"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="35dp"
            android:src="@drawable/ic_australia_flag"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:max="10"
                android:minHeight="30dp"
                android:progress="0"
                android:padding="10dp"
                android:indeterminate="false"
                />

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="15dp"
                android:textSize="14dp"
                android:text="0/10"/>
            
        </LinearLayout>

        <TextView
            android:id="@+id/option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1option1"
            android:gravity="center"
            android:background="@drawable/tv_border"
            android:layout_marginTop="8dp"
            android:padding="16dp"/>

        <TextView
            android:id="@+id/option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1option2"
            android:gravity="center"
            android:background="@drawable/tv_border"
            android:layout_marginTop="8dp"
            android:padding="16dp"/>

        <TextView
            android:id="@+id/option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1option3"
            android:gravity="center"
            android:background="@drawable/tv_border"
            android:layout_marginTop="8dp"
            android:padding="16dp"/>

        <TextView
            android:id="@+id/option4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1option4"
            android:gravity="center"
            android:background="@drawable/tv_border"
            android:layout_marginTop="8dp"
            android:padding="16dp"/>

        <Button
            android:id="@+id/check_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_answer_btn"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn"
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            android:padding="25dp"/>



    </LinearLayout>

  


</ScrollView>