<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:background="@color/background"
    tools:context=".ResultActivity">

    <TextView
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="28sp"
        android:textStyle="bold"
        />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:padding="50dp"
        android:src="@drawable/ic_trophy"/>


    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congrats"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/username"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="username"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="6 out of 10"
            android:textSize="20sp"
            />
    </LinearLayout>



    <Button
        android:id="@+id/btn_finish"
        android:layout_margin="30dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:background="@drawable/btn"
        android:textColor="@color/black"
        />


</LinearLayout>